argo/argo-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-server-ingress
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: argo.example.com
      http:
        paths:
          - backend:
              serviceName: argo-server
              servicePort: 2746
